# pulpie

./: README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
data/: bench_gpu.py  bench_gpu_compile.py  bench_modernbert.py  bench_onnx_cpu.py  bench_tensorrt.py  bench_throughput_real.py  cascade_analysis.py  download_warcs.py  generate_cc_training_data.py  generate_training_data.py  generate_training_data_dom.py  label_with_dripper.py  make_wmb_eval_sample.py  sample_cc.py  train_combined.py  train_distill_eurobert_210m.py  train_eurobert_classifier_64tok.py  train_gbm.py  train_gbm_v2.py  train_gbm_v3_cc.py  train_potion_classifier.py  train_test_split.py  tune_gbm.py
docs/: blog_dirty_context.md  blog_introducing_hummingbird.md  encoder_classifier.md  error_analysis.md  generate_figures.py
eval/: README.md  analyze_failures.py  bench_qwen_classify.py  bench_rouge.py  bench_rouge_h2t.py  bench_rouge_h2t_results.json  bench_throughput.py  compare_formatting.py  diagnose_rouge.py  diagnose_rouge_gap.py  error_analysis.py  eval_all_methods_200.py  eval_block_classifier.py  eval_deepseek_wmb.py  eval_dripper_native.py  eval_latte_large_vs_dripper.py  eval_qrater_clean_rate.py  eval_qrater_dripper.py  eval_sample50.py  inspect_empty_pages.py  inspect_eval_pages.py  score_qrater.py
eval/results/: dripper_scores.json  magic-html_scores.json  pulpie-base_scores.json  pulpie-large_scores.json  pulpie-small_scores.json  raw-h2t_scores.json  trafilatura_scores.json
legacy/: Cargo.toml
legacy/src/: hummingbird.rs  lib.rs
pulpie/: README.md  pyproject.toml
(+13 files in other folders)
