[package]
name = "pulpie"
version = "0.1.0"
edition = "2021"
description = "Fast CPU-only web content extraction pipeline"
license = "AGPL-3.0"

[dependencies]
scraper = "0.22"
regex = "1"
ego-tree = "0.10.0"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "pulpie"
path = "src/bin/hummingbird.rs"

[[bin]]
name = "export_features"
path = "src/bin/export_features.rs"

[[bin]]
name = "bench_rouge_trees"
path = "src/bin/bench_rouge_trees.rs"

[lib]
name = "pulpie"
path = "src/lib.rs"
